--- a/index.html
+++ b/index.html
@@ -144,10 +144,10 @@
             </section>
             <!--Cloudstack Links-->
             <section>
-                <a target="_bLank" href="#"></a><br>
-                <a target="_bLank" href="#"></a><br>
-                <a target="_bLank" href="#"></a><br>
-                <a target="_bLank" href="#"></a><br>
+                <a target="_bLank" href="https://maxlewisconsultantpteltd.github.io/Advance-Pricing-Agreements-APA-Benefits-And-Process/">https://maxlewisconsultantpteltd.github.io/Advance-Pricing-Agreements-APA-Benefits-And-Process/</a><br>
+                <a target="_bLank" href="https://maxlewis.s3.us-east-005.backblazeb2.com/Advance+Pricing+Agreements+(APA):+Benefits+And+Process/index.html">https://maxlewis.s3.us-east-005.backblazeb2.com/Advance+Pricing+Agreements+(APA):+Benefits+And+Process/index.html</a><br>
+                <a target="_bLank" href="https://advance-pricing-agreements-apa-ben-git-56698c-maxlewis-projects.vercel.app/">https://advance-pricing-agreements-apa-ben-git-56698c-maxlewis-projects.vercel.app/</a><br>
+                <a target="_bLank" href="https://ornate-seahorse-d5a2c3.netlify.app/">https://ornate-seahorse-d5a2c3.netlify.app/</a><br>
             </section>
         <!---Sidebar-->
         <div class="side-bar">
